# frigg

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  setup.sh
libcef3/: CMakeLists.txt  README.txt
libcef3/Resources/locales/: am.pak  ca.pak  cs.pak  el.pak  et.pak  fi.pak  fil.pak  hi.pak  id.pak  ja.pak  kn.pak  mr.pak  ms.pak  pt-BR.pak  pt-PT.pak  ro.pak  sk.pak  sl.pak  sw.pak  te.pak  th.pak  uk.pak  zh-CN.pak  zh-TW.pak
libcef3/binary/: chrome-sandbox
libcef3/include/: cef_pack_resources.h  cef_pack_strings.h  cef_version.h
libcef3/libcef_dll/: CMakeLists.txt
libcef3/resources/: cef.pak
libcef3/resources/locales/: am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  ru.pak  (+13 more)
samples/: hello_world.cpp  hello_world.h
src/: ClientV8ExtensionHandler.cpp  ClientV8ExtensionHandler.h  MyV8Accessor.cpp  MyV8Accessor.h  async_string.cpp  async_string.h  client_app.cpp  client_app.h  client_handle.cpp  client_handle.h  client_handler.cpp  client_handler.h  frigg.cpp  frigg.h  frigg_browser.cpp  frigg_browser.h  frigg_create_browser_task.cpp  frigg_create_browser_task.h  frigg_helper.cpp  frigg_web_page.cpp  frigg_web_page.h  frigga.cpp  frigga.h  helper.cpp  html_visitor.cpp  html_visitor.h  request.cpp  request.h  session.cpp  session.h  tasks.cpp  tasks.h
